# thalassa

./: .gitignore  Cargo.toml  Plan.md  README.md  flake.nix
docs/: architecture.md
examples/: README.md  mothership-config.toml  setup-nereus.sh
src/: bus.rs  chat.rs  entity.rs  main.rs  manager.rs  store.rs
src/agent/: acp.rs  bridge.rs  client.rs  mod.rs
src/interface/: telegram.rs
src/mcp/: server.rs
