[package]
name = "thalassa"
version = "0.1.0"
edition = "2021"

[dependencies]
mothership = { path = "../mothership" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
teloxide = { version = "0.12", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
modelcontextprotocol-server = "0.1.5"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
futures = "0.3.31"
async-stream = "0.3.6"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["rustls-tls"] }
